--- a/havelsan/build.gradle
+++ b/havelsan/build.gradle
@@ -29,11 +29,10 @@ ament {
         consoleScripts = [
             'havelsan_pub = org.ros2.rcljava.havelsanros2.havelsanpub.HavelsanPublisher',
             'havelsan_sub = org.ros2.rcljava.havelsanros2.havelsansub.HavelsanSubscriber',
-            'storage_pub = org.ros2.rcljava.havelsanros2.storagepub.StoragePublisher',
-            'deneme = org.ros2.rcljava.havelsanros2.storagepub.Deneme',
-            'storage_sub = org.ros2.rcljava.havelsanros2.storagesub.StorageSubscriber',
-            'denemesub = org.ros2.rcljava.havelsanros2.storagesub.DenemeSub'
-            
+            'status_pub = org.ros2.rcljava.havelsanros2.statuspub.StatusPublisher',
+            'status_sub = org.ros2.rcljava.havelsanros2.statussub.StatusSubscriber',
+            'action_pub = org.ros2.rcljava.havelsanros2.actionpub.ActionPublisher',
+            'action_sub = org.ros2.rcljava.havelsanros2.actionsub.ActionSubscriber'
             ]
     }
 }
