--- a/havelsan/gradle.properties
+++ b/havelsan/gradle.properties
@@ -1,4 +1,4 @@
-#Wed Jul 27 13:49:36 PDT 2022
+#Fri Jul 29 17:22:17 TRT 2022
 ament.build_space=/home/asimkaymak/ros2_java_ws/build/havelsan
 ament.gradle_recursive_dependencies=false
 ament.package_manifest.name=havelsan
