system update modelization

--- a/havelsan/gradle.properties
+++ b/havelsan/gradle.properties
@@ -1,4 +1,4 @@
-#Sat Jul 30 03:18:07 TRT 2022
+#Thu Aug 04 13:11:37 PDT 2022
 ament.build_space=/home/asimkaymak/ros2_java_ws/build/havelsan
 ament.gradle_recursive_dependencies=false
 ament.package_manifest.name=havelsan
